# trustification

bombastic/api/src/: lib.rs  server.rs
bombastic/index/src/: lib.rs
bombastic/indexer/src/: lib.rs
spog/api/src/: sbom.rs
spog/search/src/: lib.rs  server.rs
spog/ui/src/backend/: pkg.rs
spog/ui/src/components/: vulnerability.rs
trust/: Cargo.toml
trust/src/: all.rs  main.rs
vexination/api/src/: lib.rs  server.rs
vexination/indexer/src/: lib.rs
