[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[dependencies]
vexination = { path = "../vexination/vexination" }
vexination-api = { path = "../vexination/api" }
vexination-indexer = { path = "../vexination/indexer" }
bombastic = { path = "../bombastic/bombastic" }
bombastic-api = { path = "../bombastic/api" }
bombastic-indexer = { path = "../bombastic/indexer" }
spog = { path = "../spog/spog" }
spog-search = { path = "../spog/search" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
